--- a/css/emulation.css
+++ b/css/emulation.css
@@ -15,7 +15,7 @@
 .btn.btn--back{
     width: 1.2em;
     height: 1.2em;
-    background: url('images/left-arrow.svg') no-repeat center center;
+    background: url('../images/left-arrow.svg') no-repeat center center;
 }
 
 /* HEADER
@@ -114,7 +114,7 @@
     display: flex;
     width: 4.1rem;
     height: 4.1rem;
-    background: url('images/company.jpg') no-repeat right center;
+    background: url('../images/company.jpg') no-repeat right center;
     background-size: contain;
     margin-right: 0.7em;
 }
@@ -136,10 +136,14 @@
 .ticket__image {
     margin: 1rem auto;
     border: 6px solid white;
-    background: url('images/ticket.jpg') no-repeat right center;
+    /*background: url('images/ticket.jpg') no-repeat right center;*/
     width: 8.2rem;
     height: 8.2rem;
     background-size: contain;
+}
+.ticket__image img {
+    width: 100%;
+    height: 100%;
 }
 
 .ticket__wagon {
